-fix typo in html, add some css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <div class="section-1">
+    <div class="section-one">
         <div class="main-info">
             <div class="main-title">A Business With No Name</div>
             <div class="main-text">If you aren't prepared to handle the answers, maybe don't ask the questions</div>
@@ -27,7 +27,7 @@
         <img src="./section-one-image.jpg" alt="The photo depicting an eagle who definitely did not take a liking to you">
     </div>
 
-    <div class="section-2">
+    <div class="section-two">
         <div class="title-two">Splendid. You decided to become a client.</div>
         <div class="cards">
             <div class="card">
@@ -40,7 +40,7 @@
             </div>
             <div class="card">
                 <img src="./card-3.jpg" alt="The photo depicting an eagle sighing in resignation and reevaluating its life choices">
-                <div class="card-text">Some of our clints suffered this fate, but, sadly, there's no guarantee this will be you</div>
+                <div class="card-text">Some of our clients suffered this fate, but, sadly, there's no guarantee this will be you</div>
             </div>
             <div class="card">
                 <img src="./card-4.jpg" alt="The photo depicting an eagle trying its best to explain decency, empathy and dignity to you. You have no idea what it's talking about">
@@ -49,15 +49,15 @@
         </div>
     </div>
 
-    <div class="section-3">
+    <div class="section-three">
         <div class="massive-quote">It's a truth universally acknowledged that a single man in possession of a good fortune must be in want of a good protection service. Many people in this very district contact the police daily to report their goods being stolen, their businesses set on fire and their fingers broken in most violent ways. Considering this, there's very little recourse other than to produce the cash, to dish out the dough, to pay up.</div>
         <div class="quote-author">-Jane Austen</div>   
     </div>
 
-    <div class="section-4">
-        <div class="text-section-4">
-            <div class="section-4-title">Call for action! It's time!</div>
-            <div class="section-4-text">What are you waiting for, a special invitation? The button is right here, and the boss says you're to click it</div>
+    <div class="section-four">
+        <div class="text-section-four">
+            <div class="section-four-title">Call for action! It's time!</div>
+            <div class="section-four-text">What are you waiting for, a special invitation? The button is right here, and the boss says you're to click it</div>
         </div>
         <button>Sign up</button>
     </div>
