-add images, add more css, minor edits to content

--- a/index.html
+++ b/index.html
@@ -9,59 +9,59 @@
 </head>
 
 <body>
-    <div class="header">
-        <img src="./logo.jpg" alt="A website logo depicting a pround eagle eyeing you with disdain and a lot of suspicion">
-        <div class="header-links">
-            <a href="https://duckduckgo.com">Our Crew</a>
-            <a href="https://duckduckgo.com">Our Territory</a>
-            <a href="https://duckduckgo.com">Work For Us</a>
+        <div class="header">
+            <img src="./logo.jpg" height=100px alt="A website logo depicting a pround eagle eyeing you with disdain and a lot of suspicion">
+            <div class="header-links">
+                <a href="https://duckduckgo.com/?q=all+very+fine+gentlemen%2C+very+fine+gentlemen+indeed&t=h_&ia=web">Our Crew</a>
+                <a href="https://duckduckgo.com/?q=my+address&ia=web&iaxm=maps">Our Territory</a>
+                <a href="https://duckduckgo.com/?q=you%27re+a+very+sick+individual%2C+but+i+like+you&t=h_&ia=web">Work For Us</a>
+            </div>
         </div>
-    </div>
 
-    <div class="section-one">
-        <div class="main-info">
-            <div class="main-title">A Business With No Name</div>
-            <div class="main-text">If you aren't prepared to handle the answers, maybe don't ask the questions</div>
+        <div class="section-one">
+            <div class="main-info">
+                <div class="main-title">A Business With No Name</div>
+                <div class="main-text">If you aren't prepared to handle the answers, maybe don't ask the questions</div>
+                <button>Sign up</button>
+            </div>
+            <img src="./section-one-image.jpg" width=250 height=auto alt="The photo depicting an eagle who definitely did not take a liking to you">
+        </div>
+
+        <div class="section-two">
+            <div class="title-two">Splendid. You decided to become a client.</div>
+            <div class="cards">
+                <div class="card">
+                    <img src="./card-1.jpg" width=250px alt="The photo depicting an eagle turning away from you in disgust">
+                    <div class="card-text">And this is what happens to our clients!</div>
+                </div>
+                <div class="card">
+                    <img src="./card-2.jpg" width=250px alt="The photo depicting an eagle shaking its bald little head">
+                    <div class="card-text">This is also what happens to our clients</div>
+                </div>
+                <div class="card">
+                    <img src="./card-3.jpg" width=250px alt="The photo depicting an eagle sighing in resignation and reevaluating its life choices">
+                    <div class="card-text">Some of our clients suffered this fate, but, sadly, there's no guarantee this will be you</div>
+                </div>
+                <div class="card">
+                    <img src="./card-4.jpg" width=250px alt="The photo depicting an eagle trying its best to explain decency, empathy and dignity to you. You have no idea what it's talking about">
+                    <div class="card-text">This, however, is not our client. It would not be unwise of you to not ascribe these effects to our service, and perhaps find another scapegoat</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="section-three">
+            <div class="massive-quote">It's a truth universally acknowledged that a single man in possession of a good fortune must be in want of a good protection service. Many people in your very district contact the police daily to report their goods being stolen, their businesses set on fire and their fingers broken in most violent ways. Considering this, there's very little recourse other than to produce the cash, to dish out the dough, to pay up.</div>
+            <div class="quote-author">-Jane Austen</div>   
+        </div>
+
+        <div class="section-four">
+            <div class="text-section-four">
+                <div class="section-four-title">Call for action! It's time!</div>
+                <div class="section-four-text">What are you waiting for, a special invitation? The button is right here, and the boss says you're to click it</div>
+            </div>
             <button>Sign up</button>
         </div>
-        <img src="./section-one-image.jpg" alt="The photo depicting an eagle who definitely did not take a liking to you">
-    </div>
 
-    <div class="section-two">
-        <div class="title-two">Splendid. You decided to become a client.</div>
-        <div class="cards">
-            <div class="card">
-                <img src="./card-1.jpg" alt="The photo depicting an eagle turning away from you in disgust">
-                <div class="card-text">And this is what happens to our clients!</div>
-            </div>
-            <div class="card">
-                <img src="./card-2.jpg" alt="The photo depicting an eagle shaking its bald little head">
-                <div class="card-text">This is also what happens to our clients</div>
-            </div>
-            <div class="card">
-                <img src="./card-3.jpg" alt="The photo depicting an eagle sighing in resignation and reevaluating its life choices">
-                <div class="card-text">Some of our clients suffered this fate, but, sadly, there's no guarantee this will be you</div>
-            </div>
-            <div class="card">
-                <img src="./card-4.jpg" alt="The photo depicting an eagle trying its best to explain decency, empathy and dignity to you. You have no idea what it's talking about">
-                <div class="card-text">This, however, is not our client. It would not be unwise of you to not ascribe these effects to our service, and perhaps find another scapegoat</div>
-            </div>
-        </div>
-    </div>
-
-    <div class="section-three">
-        <div class="massive-quote">It's a truth universally acknowledged that a single man in possession of a good fortune must be in want of a good protection service. Many people in this very district contact the police daily to report their goods being stolen, their businesses set on fire and their fingers broken in most violent ways. Considering this, there's very little recourse other than to produce the cash, to dish out the dough, to pay up.</div>
-        <div class="quote-author">-Jane Austen</div>   
-    </div>
-
-    <div class="section-four">
-        <div class="text-section-four">
-            <div class="section-four-title">Call for action! It's time!</div>
-            <div class="section-four-text">What are you waiting for, a special invitation? The button is right here, and the boss says you're to click it</div>
-        </div>
-        <button>Sign up</button>
-    </div>
-
-    <div class="footer">Copyright © What is here to even copyright 2022</div>
+        <div class="footer">Copyright © What is here to even copyright 2022</div>
 </body>
 </html>
