-add the rest of css, slightly edit html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="main-info">
                 <div class="main-title">A Business With No Name</div>
                 <div class="main-text">If you aren't prepared to handle the answers, maybe don't ask the questions</div>
-                <button>Sign up</button>
+                <a href="https://duckduckgo.com/?q=wouldn%27t+you+like+to+know%2C+weather+boy"><button>Sign up</button></a>
             </div>
             <img src="./section-one-image.jpg" width=250 height=auto alt="The photo depicting an eagle who definitely did not take a liking to you">
         </div>
@@ -59,7 +59,7 @@
                 <div class="section-four-title">Call for action! It's time!</div>
                 <div class="section-four-text">What are you waiting for, a special invitation? The button is right here, and the boss says you're to click it</div>
             </div>
-            <button>Sign up</button>
+            <a href="https://duckduckgo.com/?q=ayn+rand+living+on+welfare"><button>Sign up</button></a>
         </div>
 
         <div class="footer">Copyright © What is here to even copyright 2022</div>
